<resources>
    <string name="app_name">잇모닝</string>
    <string name="naver_client_id">3YRdpTlZI3Sz1lzmY90g</string>
    <string name="naver_client_secret">DEkcT1A7z2</string>
    <string name="naver_client_name">잇모닝(EatMorning)</string>
    <string name="kakao_app_key">ebc017f2279f3ad64d4ef20d550f8c1a</string>
    <string name="facebook_app_id">496500598073974</string>
    <string name="fb_login_protocol_scheme">fb496500598073974</string>

    <string name="hint_id">사용자 ID를 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_passwordcheck">패스워드를 한번 더 입력하세요</string>
    <string name="hint_birth">생년월일을 입력하세요</string>
    <string name="hint_name">사용자 이름을 입력하세요</string>
    <string name="hint_mobileNO">휴대전화 번호를 입력하세요</string>
    <string name="hint_email">이메일을 입력하세요.</string>
    <string name="hint_address">주소를 입력하세요</string>
    <string name="hint_subaddress">상세 주소를 입력하세요</string>

    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_findID">아이디찾기</string>
    <string name="btn_findPW">비밀번호찾기</string>
    <string name="btn_logout">로그아웃</string>

    <string name="password_reg_success">올바른 비밀번호 입니다.</string>
    <string name="password_reg_fail">영문,숫자,특수문자가 포함되고 8-20의 길이여야합니다.</string>
    <string name="password_check_success">비밀번호와 비밀번호 확인이 일치합니다.</string>
    <string name="password_check_fail">비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>
    <string name="email_reg_success">올바른 이메일입니다.</string>
    <string name="email_reg_fail">올바르지 않은 형식의 이메일입니다.</string>
    <string name="pnum_reg_success">올바른 휴대전화 번호입니다.</string>
    <string name="pnum_reg_fail">올바르지 않은 형식의 휴대전화 번호입니다.</string>
    <string name="name_reg_success">올바른 사용자 이름입니다..</string>
    <string name="name_reg_fail">사용자 이름은 2-12글자의 한글이여야 합니다.</string>

    <string name="color_red">#FF3300</string>
    <string name="color_green">#009933</string>
    <string name="title_activity__menu">Activity_Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>