<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_main"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/input_userID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_id"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_password"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:backgroundTint="@color/btn_light"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:backgroundTint="@color/btn_light"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="70pt"
            android:layout_gravity="center"
            android:columnCount="4"
            android:padding="3pt"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="10pt"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="4"
                android:layout_gravity="center"
                android:text="소셜 계정으로 로그인하기"
                android:textAlignment="center"
                android:textSize="16dp" />

            <ImageButton
                android:id="@+id/btn_naver_login"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:layout_columnWeight="0.25"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="2pt"
                android:src="@drawable/naver_login_icon"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/white" />

            <ImageButton
                android:id="@+id/btn_kakao_login"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="0.25"
                android:src="@drawable/kakao_login_icon"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/white"
                android:layout_margin="2pt" />


            <ImageButton
                android:id="@+id/btn_facebook_login"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnWeight="0.25"
                android:src="@drawable/facebook_login_icon"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/white"
                android:layout_margin="2pt" />


            <ImageButton
                android:id="@+id/btn_google_login"
                android:layout_width="0dp"
                android:layout_height="30pt"
                android:layout_row="1"
                android:layout_column="3"
                android:layout_columnWeight="0.25"
                android:src="@drawable/google_login_icon"
                android:scaleType="fitCenter"
                android:backgroundTint="@color/white"
                android:layout_margin="2pt" />
        </GridLayout>
    </LinearLayout>
</LinearLayout>