<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_main"
    android:orientation="vertical"
    android:theme="@style/Theme.Catstone_EatMorning"
    android:padding="25sp" >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:rowCount="2"
        android:columnCount="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:paddingLeft="10sp"
            android:paddingRight="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="회원가입"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"/>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:columnCount="2"
                android:rowCount="15">

                <EditText
                    android:id="@+id/input_user_ID"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="0.7"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_margin="3sp"
                    android:layout_marginBottom="10sp"
                    android:hint="@string/hint_id"
                    android:backgroundTint="@color/black"
                    android:inputType="text"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

                <Button
                    android:id="@+id/btn_user_IDcheck"
                    android:layout_width="0sp"
                    android:layout_height="40sp"
                    android:layout_columnWeight="0.3"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_margin="3sp"
                    android:layout_marginBottom="10sp"
                    android:backgroundTint="@color/white"
                    android:text="중복확인"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_user_name"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="3sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <TextView
                    android:id="@+id/text_name_reg"
                    android:layout_width="0sp"
                    android:layout_height="20sp"
                    android:layout_columnWeight="1"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:gravity="left"
                    />
                <EditText
                    android:id="@+id/input_user_password"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="3sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <TextView
                    android:id="@+id/text_password_reg"
                    android:layout_width="0sp"
                    android:layout_height="20sp"
                    android:layout_columnWeight="1"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:gravity="left"
                    />

                <EditText
                    android:id="@+id/input_user_password_check"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="3sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_passwordcheck"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <TextView
                    android:id="@+id/text_password_check"
                    android:layout_width="0sp"
                    android:layout_height="20sp"
                    android:layout_columnWeight="1"
                    android:layout_row="6"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:gravity="left"
                    />
                <EditText
                    android:id="@+id/input_user_email"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_row="7"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="3sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <TextView
                    android:id="@+id/text_email_reg"
                    android:layout_width="0sp"
                    android:layout_height="20sp"
                    android:layout_columnWeight="1"
                    android:layout_row="8"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:gravity="left"
                    />
                <EditText
                    android:id="@+id/input_user_pnum"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_row="9"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="3sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_mobileNO"
                    android:inputType="phone"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <TextView
                    android:id="@+id/text_pnum_reg"
                    android:layout_width="0sp"
                    android:layout_height="20sp"
                    android:layout_columnWeight="1"
                    android:layout_row="10"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:gravity="left"
                    />
                <TextView
                    android:layout_width="0sp"
                    android:layout_height="30sp"
                    android:layout_columnWeight="1"
                    android:layout_row="11"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="10sp"
                    android:text="기본 배송지 입력하기"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
                <EditText
                    android:id="@+id/input_user_address"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_row="12"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="0.7"
                    android:layout_margin="3sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_address"
                    android:focusable="true"
                    android:inputType="text"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />

                <EditText
                    android:id="@+id/input_user_detail_address"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_row="13"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="3sp"
                    android:layout_marginBottom="10sp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/hint_subaddress"
                    android:inputType="text"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColor="@color/input_register"
                    android:textColorHint="@color/input_register_hint" />
                <CheckBox
                    android:id="@+id/checkbox_agree"
                    android:layout_width="0sp"
                    android:layout_height="30sp"
                    android:layout_row="14"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="3sp"
                    android:textSize="15sp"
                    android:text="개인정보 이용에 동의"
                    android:buttonTint="@color/input_login"
                    />
            </GridLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="bottom"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_register_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_register"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="50sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:textSize="18sp"
                android:backgroundTint="@color/btn_light"/>
        </LinearLayout>
    </GridLayout>
</ScrollView>